; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_generators.c_zend_generator_get_iterator.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_generators.c_zend_generator_get_iterator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32* }
%struct.TYPE_13__ = type { %struct.TYPE_12__*, %struct.TYPE_11__* }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [44 x i8] c"Cannot traverse an already closed generator\00", align 1
@ZEND_ACC_RETURN_REFERENCE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [89 x i8] c"You can only iterate a generator by-reference if it declared that it yields by-reference\00", align 1
@zend_generator_iterator_functions = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_12__* @zend_generator_get_iterator(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca %struct.TYPE_13__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = call i64 @Z_OBJ_P(i32* %10)
  %12 = inttoptr i64 %11 to %struct.TYPE_13__*
  store %struct.TYPE_13__* %12, %struct.TYPE_13__** %9, align 8
  %13 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %14 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %13, i32 0, i32 1
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %16 = icmp ne %struct.TYPE_11__* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %3
  %18 = call i32 @zend_throw_exception(i32* null, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 0)
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %53

19:                                               ; preds = %3
  %20 = load i32, i32* %7, align 4
  %21 = call i64 @UNEXPECTED(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %37

23:                                               ; preds = %19
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @ZEND_ACC_RETURN_REFERENCE, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %23
  %36 = call i32 @zend_throw_exception(i32* null, i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str.1, i64 0, i64 0), i32 0)
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %53

37:                                               ; preds = %23, %19
  %38 = call %struct.TYPE_12__* @emalloc(i32 16)
  %39 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %39, i32 0, i32 0
  store %struct.TYPE_12__* %38, %struct.TYPE_12__** %40, align 8
  store %struct.TYPE_12__* %38, %struct.TYPE_12__** %8, align 8
  %41 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %42 = call i32 @zend_iterator_init(%struct.TYPE_12__* %41)
  %43 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %43, i32 0, i32 1
  store i32* @zend_generator_iterator_functions, i32** %44, align 8
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @Z_ADDREF_P(i32* %45)
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %48 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i32 0, i32 0
  %49 = load i32*, i32** %6, align 8
  %50 = call i64 @Z_OBJ_P(i32* %49)
  %51 = call i32 @ZVAL_OBJ(i32* %48, i64 %50)
  %52 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  store %struct.TYPE_12__* %52, %struct.TYPE_12__** %4, align 8
  br label %53

53:                                               ; preds = %37, %35, %17
  %54 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  ret %struct.TYPE_12__* %54
}

declare dso_local i64 @Z_OBJ_P(i32*) #1

declare dso_local i32 @zend_throw_exception(i32*, i8*, i32) #1

declare dso_local i64 @UNEXPECTED(i32) #1

declare dso_local %struct.TYPE_12__* @emalloc(i32) #1

declare dso_local i32 @zend_iterator_init(%struct.TYPE_12__*) #1

declare dso_local i32 @Z_ADDREF_P(i32*) #1

declare dso_local i32 @ZVAL_OBJ(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
